# FIR-Filter-Automation

./: .gitignore  FIR.py  README.md  add.v  adder21.v  adder22.v  adder32.v  exponent.v  fir_mcshm8.v  firmcshm8new_net.v  main.py  mcshm16_fp.v  pyproject.toml  regss.v  requirements.txt  setup.py
.github/: attributes
examples/: example_usage.py
src/: FIR.py  __init__.py
templates/: adder.v  mprecomputer.v
