[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fir-filter-automation"
version = "1.0.0"
description = "Automated Verilog code generation for FIR filters using Jinja templating"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.7"
dependencies = [
    "jinja2>=3.0.0",
    "xlwings>=0.30.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/your-username/fir-filter-automation"
Repository = "https://github.com/your-username/fir-filter-automation.git"
Issues = "https://github.com/your-username/fir-filter-automation/issues"

[tool.setuptools.packages.find]
where = ["src"] 